--- a/src/app/categorias/categorias.component.html
+++ b/src/app/categorias/categorias.component.html
@@ -7,7 +7,12 @@
         <div *ngFor="let productCategory of products" class="col-sm-12 col-md-4 col-lg-4 text-center">
             <!--  -->
             <div class="card clean-card text-center">
-                <img class="card-img-top d-block" src="http://localhost:8080/renter/uploads/img/{{productCategory.product.productImage[0].imageRoute}}">
+                <div *ngIf="productCategory.product.productImage?.length>0 else elseImage">
+                    <img class="card-img-top d-block" src="http://localhost:8080/renter/uploads/img/{{productCategory.product.productImage[0].imageRoute}}">
+                </div>
+                <ng-template #elseImage>
+                    <img class="card-img-top d-block" src="assets/images/notfound.png">
+                </ng-template>
                 <div class="card-body info">
                     <h4 class="card-title">{{productCategory.product.productName}}</h4>
                     <h6 class="card-subtitle mb-2 text-muted">{{productCategory.product.productBrand}}</h6>
