--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,14 +1,12 @@
 <mat-sidenav-container class="sidenav-container">
     <mat-sidenav #drawer class="sidenav" #sidenav (keydown.escape)="close('escape')">
         <mat-toolbar class="main-nav text-white">
-            <span><mat-icon>person</mat-icon> Hello {{ user }}</span>
+            <span><mat-icon>person</mat-icon> Hello {{ auth.usuario.username }}</span>
 
         </mat-toolbar>
         <mat-nav-list>
             <a mat-list-item class="text-muted" href="#">RENT BY CATEGORY</a>
-            <a mat-list-item routerLink="/categorias">Mechanics<span class="spacer"></span><mat-icon>keyboard_arrow_right</mat-icon></a>
-            <a mat-list-item routerLink="/categorias">Carpentry<span class="spacer"></span><mat-icon>keyboard_arrow_right</mat-icon></a>
-            <a mat-list-item routerLink="/categorias">Electricity<span class="spacer"></span><mat-icon>keyboard_arrow_right</mat-icon></a>
+            <a mat-list-item *ngFor="let category of productCategories " [routerLink]="['/categories/category', category]">{{category}}<span class="spacer"></span><mat-icon>keyboard_arrow_right</mat-icon></a>
         </mat-nav-list>
         <hr>
         <mat-nav-list>
@@ -18,7 +16,6 @@
                 <mat-icon>language</mat-icon>English
             </a>
             <a mat-list-item>Help</a>
-            <a mat-list-item>Sign In</a>
         </mat-nav-list>
     </mat-sidenav>
 
