shopping cart added to the page

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,87 +1,128 @@
 <div>
     <div class="card shopping-cart">
-             <div class="card-header bg-dark text-light">
-                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                 Shopping cart
-                 <a href="" class="btn btn-outline-info btn-sm pull-right">Continue shopping</a>
-                 <div class="clearfix"></div>
-             </div>
-             <div class="card-body" *ngIf="cartItems.length > 0">
-                     <!-- PRODUCT -->
-                     <div class="row" *ngFor="let cartitem of cartItems; let i = index" >
-                        
-                         <div class="col-12 col-sm-12 col-md-2 col-xs-12 col-lg-12">  
-                         <img class="img-responsive" src="" alt="prewiew" width="120" height="80">
-                         </div>
-                         <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-6">
-                         <h4 class="product-name"><strong>{{cartitem.productName}}</strong></h4>
-                             <h4>
-                             <small>{{cartitem.productDescription}}</small>
-                             </h4>
-                         </div>
-                         <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
-                             
-                             
-                             <div class="col-4 col-sm-4 col-md-4">
-                                 <table class="table text-center">
-                                     <thead>
-                                        <th>
-                                            <label>Price</label> 
-                                        </th>
-                                        <th>
-                                            <tr>
-                                                <label>Days</label>
-                                            </tr>
-                                        </th>
-                                        <th>
-                                            
-                                        </th>
-                                     </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>
-                                                ${{cartitem.productPrice}} 
-                                            </td>
-                                            <td>
-                                                <div class="quantity">                                
-                                                    <input id="days" type="number" step="1" max="99" min="1" value="1" title="Qty" class="qty"
-                                                           size="4">                                            
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <div class="col-2 col-sm-2 col-md-2 text-right">
-                                
-                                                    <button type="button" class="btn btn-outline-danger btn-xs" (click)="deleteItem(cartitem.productId)">
-                                                        <i class="fa fa-trash" aria-hidden="true"></i>
-                                                    </button>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                    
-                                 </table>                                
-                                
-                             </div>
-                           
-                         </div>
-                     </div>
-                     <hr>
-                    </div>
-                     <!-- END PRODUCT -->
-                     <!-- PRODUCT -->
-             </div>
-             <div class="card-footer"> 
-                 <div class="pull-right" style="margin: 10px" *ngIf="cartItems.length > 0">
-                     <a href="" class="btn btn-success pull-right">Checkout</a>
-                     <div class="pull-right" style="margin: 5px">
-                         Total price: <b>50.00€</b>
-                     </div>
-                 </div>
-                 <div class="pull-right" style="margin: 10px" *ngIf="cartItems.length == 0">
-                    <div class="alert-info">
-                        <p>There is no items in your shopping cart</p>
-                    </div>
+        <div class="card-header bg-dark text-light">
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+            Shopping cart
+            <a href="" class="btn btn-outline-info btn-sm pull-right">Continue shopping</a>
+            <div class="clearfix"></div>
+        </div>
+        <div class="card-body" *ngIf="cartItems.length > 0">
+            <!-- PRODUCT -->
+            <div class="row" *ngFor="let cartitem of cartItems; let i = index">
+
+                <div class="col-12 col-sm-12 col-md-2 col-xs-12 col-lg-12">
+                    <img class="img-responsive" src="" alt="prewiew" width="120" height="80">
                 </div>
+                <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-6">
+                    <h4 class="product-name"><strong>{{cartitem.productName}}</strong></h4>
+                    <h4>
+                        <small>{{cartitem.productDescription}}</small>
+                    </h4>
+                </div>
+                <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
+
+
+                    <div class="col-4 col-sm-4 col-md-4">
+                        <table class="table text-center">
+                            <thead>
+                                <th>
+                                    <label>Price</label>
+                                </th>
+                                <th>
+                                    <tr>
+                                        <label>Days</label>
+                                    </tr>
+                                </th>
+                                <th>
+
+                                </th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td *ngIf="cartPrices[i]" class="price">
+                                        ${{cartitem.productPrice * cartPrices[i]}}
+
+                                    </td>
+                                    <td *ngIf="!cartPrices[i]" class="price">
+                                        ${{cartitem.productPrice}}
+
+                                    </td>
+                                    <td>
+                                        <div class="quantity">
+                                            <input id="days" type="number" (click)="multiply()"
+                                                [(ngModel)]="cartPrices[i]" step="1" max="99" min="1" value="1"
+                                                title="Qty" class="qty" size="4">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="col-2 col-sm-2 col-md-2 text-right">
+
+                                            <button type="button" class="btn btn-outline-danger btn-xs"
+                                                (click)="deleteItem(cartitem.productId,i)">
+                                                <i class="fa fa-trash" aria-hidden="true"></i>
+                                            </button>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+
+                        </table>
+
+                    </div>
+
+                </div>
+            </div>
+            <hr>
+            <div class="pull-right" style="margin: 5px">
+                Total price: $ <b>{{totals}}</b>
+            </div>
+        </div>
+        <!-- END PRODUCT -->
+        <!-- PRODUCT -->
+    </div>
+    <div class="card-footer">
+        <div class="pull-right" style="margin: 10px" *ngIf="cartItems.length > 0">
+            <div *ngIf="auth.isAuthenticated()" class="">
+                <form method="POST">
+
+                    <div class="card border-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-header alert-dark">Select your payment method</div>
+                        <div class="card-body text-dark">
+                            <div class="custom-control custom-radio">
+                                <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input" value="paypal">
+                                
+                                <label class="custom-control-label" for="customRadio1">
+                                    <i class="fab fa-paypal"></i>
+                                    PayPal
+                                </label>
+                              </div>
+                              <div class="custom-control custom-radio">
+                                <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input" value="creditCard">
+                                
+                                <label class="custom-control-label" for="customRadio2">
+                                    <i class="fa fa-credit-card"></i>
+                                    Credit Card
+                                </label>
+                              </div>
+                              <br>
+                            <button type="button" (click)="check()" class="btn btn-success pull-right"
+                                *ngIf="auth.isAuthenticated()">Checkout</button>
+                          
+                        </div>
+                    </div>
+
+
                  
-             </div>
-         </div>
+                </form>
+            </div>
+            <a href="" class="btn btn-success pull-right" *ngIf="!auth.isAuthenticated()"
+                routerLink="/userLogin">Checkout</a>           
+        </div>
+        <div class="pull-right" style="margin: 10px" *ngIf="cartItems.length == 0">
+            <div class="alert-info">
+                <p>There is no items in your shopping cart</p>
+            </div>
+        </div>
+
+    </div>
+</div>
