--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -9,7 +9,7 @@
                 <div *ngFor="let product of products" class="col-sm-12 col-md-4 col-lg-4 text-center">
                     <!--  -->
                     <div class="card clean-card text-center">
-                        <img class="card-img-top d-block" src="http://localhost:8080/renter/uploads/img/{{product.productImage[0].imageRoute}}">
+                        <img class="card-img-top d-block" src="">
                         <div class="card-body info">
                             <h4 class="card-title">{{product.productName}}</h4>
                             <h6 class="card-subtitle mb-2 text-muted">{{product.productBrand}}</h6>
