--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -32,7 +32,7 @@
                                 <div class="rating">Product Rate: </div>
                                 <div class="price">
                                     <h3>${{product.productPrice}}</h3>
-                                </div><button class="btn btn-primary" type="button"><i class="icon-basket"></i>Add to Cart</button>
+                                </div><button class="btn btn-primary" (click)="addToCart()" type="button"><i class="icon-basket"></i>Add to Cart</button>
                                 <div class="summary">
                                     <p>
                                         {{product.productDescription}}
