--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -6,11 +6,11 @@
             <div class="card">
                 <div class="card-header">
                     <h3>Please Sign in</h3>
-                  
+
                 </div>
                 <div class="card-body">
                     <form method="post" class="form-signin">
-                        <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+                        <img class="mb-4" src="assets/images/toolbox.jpeg" alt="" width="72" height="72">
                         <label for="inputEmail" class="sr-only">Email address</label>
                         <input type="email" [(ngModel)]="user.username" id="inputEmail" class="form-control" placeholder="Email address" name="username">
                         <br>
@@ -20,14 +20,13 @@
                         <input class="btn btn-lg btn-primary btn-block" type="submit" (click)="login()" value="Login">
                         <button class="btn btn-lg btn-secondary btn-block" type="button" routerLink="/userRegister">Create your toolbox account</button>
                         <p class="mt-5 mb-3 text-muted">ToolBox© 2019-2020</p>
-                      </form>
+                    </form>
                 </div>
-              </div>
-     
+            </div>
+
         </div>
-        
+
     </div>
-    
+
 </div>
 <br>
-
