--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -1,8 +1,3 @@
-img {
-    height: 50vh;
-    weight: 30vh;
-}
-
 .btn {
     background-color: #f92a19;
     border: 2px solid #f92a19;
@@ -12,4 +7,14 @@ img {
 .btn:active {
     background-color: #f92a19;
     color: white;
+}
+
+img {
+    max-width: 300px;
+    height: 300px;
+}
+
+.custom-card {
+    width: 300px;
+    height: 550px;
 }
